			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

10-Mar-2002
~~~~~~~~~~~
New panel style; better looking, and sensitive right up to the edge of the
screen.

09-Mar-2002
~~~~~~~~~~~
Converted Savebox widget to new Gtk style.

07-Mar-2002
~~~~~~~~~~~
Fix compile problems with Gtk+-2.0-rc1 (missing X libs and cflags).
Added stock icons to Options box. The filer now requires Gtk+-2.0.
Updated Infobox to use new GtkTreeView widget.

05-Mar-2002
~~~~~~~~~~~
Display action window questions in bold (suggested by Andras Mohari).
Added PanelAdd and PinboardAdd SOAP methods (Stephen Watson).

28-Feb-2002
~~~~~~~~~~~
Fixed sensitive region of icons in large with details display (Bernard
Jungen).

27-Feb-2002
~~~~~~~~~~~
Added Newer option for Copy and Move operations (Stephen Watson).

26-Feb-2002
~~~~~~~~~~~
Centre colour selector on mouse, and close when options box closes.
Got background pixmaps working with Gtk+-2.0.

21-Feb-2002
~~~~~~~~~~~
Changes to options now take effect instantly. The old Apply button is gone,
and Cancel is now Revert.
Fixed stupid bug in charset conversions (reported by Andras Mohari).
Initial support for gnome-vfs (Mark Heily).

20-Feb-2002
~~~~~~~~~~~
Internal changes to the options system. See text at start of options.c.

19-Feb-2002
~~~~~~~~~~~
Changed 'Ignore case' option to 'Intelligent sorting'. A non-ASCII sort now
handles numbers in a sensible way, so that 'file10' comes after 'file9', etc
(Micah Dowty).
Fix possible type conversion problem in charset conversion code
(reported by Serban Udrea).
Allow xml:lang attribute in AppInfo files so give translations; see
ROX-Filer/AppInfo.xml for an example (suggested by Wilbert Berendsen).

18-Feb-2002
~~~~~~~~~~~
Try to compile against Gtk+-2.0 first, and only fallback to 1.2 if it's not
found.
In an Infobox, strip trailing newlines from file's output as Gtk+-2.0
labels display them.
Scroll in whole items with Gtk+-1.2, plus better cursor alignment (Bernard
Jungen).
