@@ -6,6 +6,7 @@
 ~~~~~~~~~~~
 New panel style; better looking, and sensitive right up to the edge of the
 screen.
+Converted action window results list to use the new GtkTreeView widget.
 
 09-Mar-2002
 ~~~~~~~~~~~
